[tool.poetry]
name = "audiosetdl"
version = "0.1.0"
description = "Scripts for downloading AudioSet"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
sox = "^1.3.7"
# pafy = { git = "https://github.com/mps-youtube/pafy.git", rev = "9eecd423bf2025d1c34506c2a076ddd8043cd3d3" }
pafy = "^0.5.4"
soundfile = { version = "^0.10.2", extras = ["numpy"] }
multiprocessing-logging = "^0.3.0"
youtube-dl = "^2019.7.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
